--- a/app/scss/header/header-bottom.scss
+++ b/app/scss/header/header-bottom.scss
@@ -6,6 +6,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 25px 0;
+    position: relative;
   }
 
   &__btn {
@@ -232,11 +233,11 @@
 
 @media (max-width: $lg) {
   .header-bottom {
-       position: fixed;
-       left: 0;
-       width: 100%;
-       z-index: 999;
-       margin-top: 49px;
+    position: fixed;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+    margin-top: 49px;
 
     &__inner {
       padding: 11px 0;
@@ -259,18 +260,22 @@
       display: inherit;
     }
 
-      &__btn,
-      &__search {
-        display: none;
-        transform: all 0.7s;
-      }
+    &__btn {
+      display: none;
+    }
 
-// при клике на поиск зеденый хеадер делается шире как исправить этот косяк?
+    &__search {
+      opacity: 0;
+      position: absolute;
+      transition: all 0.5s;
+      bottom: -50px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
     &__search.active {
       display: flex;
-      z-index: 10;
-      transform: translate(70px, 61px);
-      margin: 0 -100px;
+      opacity: 1;
     }
 
     &__search-input {
