--- a/app/scss/product-item.scss
+++ b/app/scss/product-item.scss
@@ -5,6 +5,7 @@
   border: 1px solid rgba(17, 17, 17, 0.2);
   box-sizing: border-box;
   border-radius: 6px;
+  transition: all 0.5s;
 
   &:hover {
     border-color: $green-900;
@@ -130,7 +131,6 @@
       border-radius: 3px;
     }
 
-    // не понимаю почему перестал работать, при нажатии вообще пропадает. Изначально все работало нормально
     &:active svg use {
       fill: rgba(255, 184, 0, 0.5);
     }
@@ -140,7 +140,7 @@
     @extend %opensans-600;
     line-height: 1.4;
     font-size: 14px;
-    padding: 0 17px;
+    padding: 0 15px;
     height: 60px;
     margin-bottom: 9px;
     text-align: left;
@@ -161,46 +161,43 @@
     color: $dark-500;
   }
 
-  &__new-price {
-    padding-right: 18px;
+  &__price-all {
+    display: flex;
+    flex-direction: column;
   }
 
   &__old-price {
     text-decoration: line-through;
     color: $silver-600;
-    transform: translate(-7px, -2px);
+    margin-left: 3px;
+}
+
+&__cart {
+  @extend %none-btn;
+  cursor: pointer;
+  width: 32px;
+  height: 32px;
+  border-radius: 3px;
+  background-color: $green-900;
+  transition: background-color 0.5s;
+
+  &:hover {
+    background-color: #4D800C;
   }
 
-  &__cart {
-    @extend %none-btn;
-    cursor: pointer;
-    width: 32px;
-    height: 32px;
+  &:focus {
+    outline: solid 4px $green-200;
     border-radius: 3px;
-    background-color: $green-900;
-    transition: background-color 0.5s;
-
-    &:hover {
-      background-color: #4D800C;
-    }
-
-    &:focus {
-      outline: solid 4px $green-200;
-      border-radius: 3px;
-    }
-
-    &:active {
-      box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-    }
-
-    svg use {
-      fill: $white;
-    }
   }
 
-  &:active svg use {
-    fill: rgba(255, 255, 255, 0.5);
+  &:active {
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
+
+  svg use {
+    fill: $white;
+  }
+}
 }
 
 @media (max-width: $xl) {
