--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -87,6 +87,7 @@ body.overlay::before {
   padding: 12px 24px;
   border-radius: 6px;
   transition: background-color 0.5s;
+  cursor: pointer;
 
   &:hover {
     background-color: #4D810C;
