--- a/app/scss/catalog-page/catalog-page.scss
+++ b/app/scss/catalog-page/catalog-page.scss
@@ -258,6 +258,10 @@
       color: #63a60e;
     }
 
+    &__status-end {
+      color: $red-900;
+    }
+
     &__rating {
       position: relative;
       padding-right: 19px;
