--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -14,6 +14,10 @@ body {
   flex-direction: column;
 }
 
+body.overlay {
+  overflow: hidden;
+}
+
 body.overlay::before {
   content: '';
   display: block;
