--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,6 +6,7 @@
 @import 'header/header-top';
 @import 'header/header-bottom';
 @import 'mob-menu';
+@import 'cart-menu';
 @import 'footer';
 @import 'index/slider-top';
 @import 'index/service';
