--- a/app/scss/mob-menu.scss
+++ b/app/scss/mob-menu.scss
@@ -181,6 +181,10 @@
         outline: none;
       }
     }
+    
+    .header-bottom__filter {
+      transform: translate(-85px, 73px);
+    }
   }
 
   .logo-green {
