--- a/app/scss/cart-menu.scss
+++ b/app/scss/cart-menu.scss
@@ -1,10 +1,11 @@
 .cart-menu {
-  max-width: 475px;
+  max-width: 482px;
   width: 100%;
   height: 100vh;
   position: fixed;
   top: 0;
   right: 0;
+  bottom: 0;
   z-index: 10;
   transform: translateX(200%);
   transition: transform 0.5s;
@@ -190,8 +191,8 @@
   }
 
   .product-content__num {
-    margin-right: 0;
-    transform: translateX(23px);
+    margin-right: 45px;
+    transform: translateX(34px);
   }
 
   &__products-inner {
@@ -242,9 +243,10 @@
   }
 }
 
+// не получается сделать так чтобы меню было по всей высоте экрана
 @media (max-width: $sm) {
   .cart-menu {
-    max-width: 355px;
+    max-width: 375px;
   }
 
   .cart-menu__products {
@@ -273,11 +275,11 @@
   }
 
   .cart-menu .price-style {
-    transform: translateX(126px);
+    transform: translateX(150px);
   }
 
   .cart-menu__products-btn::before {
-    left: 16px;
+    left: 40px;
   }
 
   .cart-menu__total-text {
@@ -286,5 +288,19 @@
 
   .cart-menu__total-price {
     font-size: 18px;
+  }
+
+  .cart-menu__btn::before {
+    display: none;
+  }
+
+  .cart-menu__btn::after {
+    content: '';
+    position: absolute;
+    background-image: url('../images/icons/close-btn-cart-mini.svg');
+    width: 18px;
+    height: 18px;
+    top: -40px;
+    left: 305px;
   }
 }
